tup/parse/testdata/error/output/assignments.tup
# missing right-hand side
expecting "expression", got "" at row 1, col 9

# unclosed labeled destructuring
expecting ")", got "=" at row 1, col 12

# missing expression after mut
expecting "expression", got "" at row 1, col 13
